<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:text="@string/tv_repair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    <EditText
            android:id="@+id/et_repair"
            android:hint="@string/et_repair_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
        <Button
                android:text="@string/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="backOnClick"/>
        <Button
                android:text="@string/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="doneOnClick"/>
    </LinearLayout>

</LinearLayout>