<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_display_problem"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_detailed_problem_description"/>
    <TextView
            android:id="@+id/tv_display_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_full_address"/>
    <TextView
            android:id="@+id/tv_display_full_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:text="Here the google map fragment should appear. It does not work on simulator because genimotion's simulators do not have google play services. But it works on (my) gsm."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <!--  Frame Layout for placing MapFragment  -->
    <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    </FrameLayout>

    <Button
            android:id="@+id/btn_display_problem_back"
            android:text="@string/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>